--- a/src/main/resources/assets/eqlanmod/lang/en_us.json
+++ b/src/main/resources/assets/eqlanmod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.eqlanmod.dumpling": "Пельмень",
   "item.eqlanmod.twitch_diamond": "Твичовский алмаз",
   "item.eqlanmod.school_boot": "Школьный ботинок",
+  "item.eqlanmod.stintocoin": "Стинта Коин",
+  "item.eqlanmod.twitch_heart": "Сердце Твича",
   "block.eqlanmod.twitch_ore": "Твичовская руда",
   "block.eqlanmod.twitch_block": "Твичовский блок",
   "creativetab.eqlan_tab": "Eqlan Mod"
