--- a/src/main/resources/assets/eqlanmod/lang/en_us.json
+++ b/src/main/resources/assets/eqlanmod/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.eqlanmod.glasses": "Крутые очки",
   "item.eqlanmod.stint_helmet": "Позолоченный монетами шлем",
   "item.eqlanmod.overcooked_dumpling": "Сгоревший Пельми",
+  "item.eqlanmod.larva": "Личинка",
+  "item.eqlanmod.cooked_larva": "Жаренная личинка",
 
   "item.eqlanmod.school_boot": "Бархатные тяги",
   "item.eqlanmod.twitch_heart": "Сердце Твича",
