Added Om Nom whit functions

--- a/src/main/resources/assets/eqlanmod/lang/en_us.json
+++ b/src/main/resources/assets/eqlanmod/lang/en_us.json
@@ -6,6 +6,8 @@
 
   "item.eqlanmod.glasses": "Крутые очки",
   "item.eqlanmod.stint_helmet": "Позолоченный монетами шлем",
+  "item.eqlanmod.boxers": "Боксеры",
+
   "item.eqlanmod.overcooked_dumpling": "Сгоревший Пельми",
   "item.eqlanmod.larva": "Личинка",
   "item.eqlanmod.cooked_larva": "Жаренная личинка",
@@ -14,9 +16,13 @@
   "item.eqlanmod.twitch_heart": "Сердце Твича",
   "item.eqlanmod.twitch_diamond": "Твичовский алмаз",
   "item.eqlanmod.coin_alloy": "Сплав монет",
+  "item.eqlanmod.om_nom": "Ам Ням",
+  "item.eqlanmod.cactus_plush": "Танцующий кактус",
 
   "block.eqlanmod.twitch_ore": "Твичовская руда",
   "block.eqlanmod.twitch_block": "Твичовский блок",
+
+  "sounds.eqlanmod.cactus_used": "",
 
   "creativetab.eqlan_tab": "Eqlan Mod"
 }
